[gd_scene load_steps=47 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/Fullscreens-10.png.png" type="Texture" id=2]
[ext_resource path="res://sprites/Fullscreens-2.png.png" type="Texture" id=3]
[ext_resource path="res://sprites/text.png" type="Texture" id=4]
[ext_resource path="res://common/Arrow.gd" type="Script" id=5]
[ext_resource path="res://fonts/Ramabhadra/Ramabhadra-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/Cousine/Cousine-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://menu/SongSelector.gd" type="Script" id=8]
[ext_resource path="res://sprites/Fullscreens-6.png.png" type="Texture" id=9]
[ext_resource path="res://sprites/Fullscreens-7.png.png" type="Texture" id=10]
[ext_resource path="res://sprites/Fullscreens-8.png.png" type="Texture" id=11]
[ext_resource path="res://sprites/Fullscreens-4.png.png" type="Texture" id=12]
[ext_resource path="res://menu/SongSampler.gd" type="Script" id=13]
[ext_resource path="res://menu/InputMap.gd" type="Script" id=14]
[ext_resource path="res://menu/InputMapItem.gd" type="Script" id=15]
[ext_resource path="res://sprites/Letters.png" type="Texture" id=16]
[ext_resource path="res://rock-rhythm.ogg" type="AudioStream" id=17]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 300, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 100, 300, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 400, 300, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 300, 100 )

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=26]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 300, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 300, 100 )

[sub_resource type="DynamicFont" id=27]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=29]
size = 12
extra_spacing_top = -10
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=28]
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 64.5, 0.5, 31, 31 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 128, 32, 32 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="TitleBG" type="Sprite" parent="."]
position = Vector2( 300, 256 )
texture = ExtResource( 2 )

[node name="SettingsBG" type="Sprite" parent="."]
visible = false
position = Vector2( 300, 256 )
texture = ExtResource( 3 )

[node name="PressEnterText" type="Sprite" parent="."]
position = Vector2( 300, 460 )
texture = SubResource( 1 )

[node name="PlaySongText" type="Sprite" parent="."]
visible = false
position = Vector2( 293.189, 406.292 )
texture = SubResource( 2 )

[node name="SettingsText" type="Sprite" parent="."]
visible = false
position = Vector2( 93.9594, 450.008 )
texture = SubResource( 3 )

[node name="SettingsText2" type="Sprite" parent="."]
visible = false
position = Vector2( 503.188, 448.79 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 200, 300, 100 )

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 99.278, 402.855 )
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = SubResource( 4 )
script = ExtResource( 5 )

[node name="SettingsControlsText" type="RichTextLabel" parent="."]
visible = false
margin_left = 248.512
margin_top = 478.0
margin_right = 375.512
margin_bottom = 509.0
custom_fonts/normal_font = SubResource( 25 )
text = "Close: ENTER"
scroll_active = false

[node name="SettingsDescription" type="RichTextLabel" parent="."]
visible = false
margin_left = 78.5703
margin_top = 371.546
margin_right = 541.57
margin_bottom = 481.546
custom_fonts/normal_font = SubResource( 26 )
text = "Standard keyboards may not support holding down lots of keys at the same time. Expert+ mode requires a keyboard that can do this. All other modes can be played on any keyboard that can do TWO buttons at the same time."
scroll_active = false

[node name="VersionText" type="RichTextLabel" parent="."]
margin_left = 10.6308
margin_top = 481.894
margin_right = 140.631
margin_bottom = 507.894
custom_fonts/normal_font = SubResource( 5 )
text = "Version 1.0.1"
scroll_active = false

[node name="SongSelector" type="Node2D" parent="."]
visible = false
position = Vector2( 300, 0 )
script = ExtResource( 8 )

[node name="EasyBG" type="Sprite" parent="SongSelector"]
position = Vector2( 0, 256 )
texture = ExtResource( 9 )

[node name="MediumBG" type="Sprite" parent="SongSelector"]
visible = false
position = Vector2( 0, 256 )
texture = ExtResource( 10 )

[node name="ExpertBG" type="Sprite" parent="SongSelector"]
visible = false
position = Vector2( 0, 256 )
texture = ExtResource( 11 )

[node name="ExpertPlusBG" type="Sprite" parent="SongSelector"]
visible = false
position = Vector2( 0, 256 )
texture = ExtResource( 12 )

[node name="SongArrow" type="Sprite" parent="SongSelector"]
position = Vector2( -50, 45 )
scale = Vector2( 0.25, 0.25 )
texture = SubResource( 6 )

[node name="ModeArrow" type="Sprite" parent="SongSelector"]
position = Vector2( -249.045, 111.126 )
scale = Vector2( 0.1, 0.1 )
texture = SubResource( 7 )

[node name="EasyText" type="RichTextLabel" parent="SongSelector"]
margin_left = -221.306
margin_top = 93.9007
margin_right = -148.306
margin_bottom = 124.901
custom_fonts/normal_font = SubResource( 27 )
text = "EASY"
scroll_active = false

[node name="MediumText" type="RichTextLabel" parent="SongSelector"]
margin_left = -221.306
margin_top = 128.901
margin_right = -132.306
margin_bottom = 162.901
custom_fonts/normal_font = SubResource( 27 )
text = "MEDIUM"
scroll_active = false

[node name="ExpertText" type="RichTextLabel" parent="SongSelector"]
margin_left = -221.306
margin_top = 164.901
margin_right = -130.306
margin_bottom = 205.901
custom_fonts/normal_font = SubResource( 27 )
text = "EXPERT"

[node name="ExpertPlusText" type="RichTextLabel" parent="SongSelector"]
margin_left = -221.306
margin_top = 199.901
margin_right = -123.306
margin_bottom = 236.901
custom_fonts/normal_font = SubResource( 27 )
text = "EXPERT+"

[node name="SongSelectControlsText" type="RichTextLabel" parent="SongSelector"]
margin_left = -276.0
margin_top = 416.0
margin_right = 52.0
margin_bottom = 514.0
custom_fonts/normal_font = SubResource( 29 )
text = "
Select Song:	Arrow UP/DOWN
Select Mode:   Arrow LEFT/RIGHT
Select Speed:  +/-
Play Song:		ENTER
Back:			   BACKSPACE"
scroll_active = false

[node name="FolderNotFound" type="RichTextLabel" parent="SongSelector"]
visible = false
margin_left = -57.0
margin_top = 172.0
margin_right = 127.0
margin_bottom = 278.0
text = "Songs folder not found!

Make sure the folder is called \"songs\" and it is in the correct location"
scroll_active = false

[node name="SongSampler" type="AudioStreamPlayer" parent="SongSelector"]
script = ExtResource( 13 )

[node name="NoteSpeedText" type="RichTextLabel" parent="SongSelector"]
margin_left = -220.0
margin_top = 293.0
margin_right = -125.0
margin_bottom = 332.0
custom_fonts/normal_font = SubResource( 28 )
text = "Speed: 1.0"

[node name="InputMap" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 300, 256 )
script = ExtResource( 14 )

[node name="Lane0" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -218.298, -16.6908 )
script = ExtResource( 15 )

[node name="Key" type="Sprite" parent="InputMap/Lane0"]
texture = SubResource( 8 )

[node name="Lane1" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -158.124, -15.8124 )
script = ExtResource( 15 )

[node name="Key" type="Sprite" parent="InputMap/Lane1"]
texture = SubResource( 9 )

[node name="Lane2" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -103.22, -15.3731 )
script = ExtResource( 15 )

[node name="Key" type="Sprite" parent="InputMap/Lane2"]
texture = SubResource( 10 )

[node name="Lane3" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -50.0725, -14.4947 )
script = ExtResource( 15 )

[node name="Key" type="Sprite" parent="InputMap/Lane3"]
texture = SubResource( 11 )

[node name="Lane4" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 65.4456, -14.0555 )
script = ExtResource( 15 )

[node name="Key" type="Sprite" parent="InputMap/Lane4"]
texture = SubResource( 12 )

[node name="Lane5" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 115.957, -14.9339 )
script = ExtResource( 15 )

[node name="Key" type="Sprite" parent="InputMap/Lane5"]
texture = SubResource( 13 )

[node name="Lane6" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 166.469, -15.3731 )
script = ExtResource( 15 )

[node name="Key" type="Sprite" parent="InputMap/Lane6"]
texture = SubResource( 14 )

[node name="Lane7" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 213.467, -12.2985 )
script = ExtResource( 15 )

[node name="Key" type="Sprite" parent="InputMap/Lane7"]
texture = SubResource( 15 )

[node name="Lane8" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -132.87, 84.1876 )
script = ExtResource( 15 )

[node name="Key1" type="Sprite" parent="InputMap/Lane8"]
position = Vector2( -54, 0 )
texture = SubResource( 16 )

[node name="Key2" type="Sprite" parent="InputMap/Lane8"]
position = Vector2( -18, 0 )
texture = SubResource( 17 )

[node name="Key3" type="Sprite" parent="InputMap/Lane8"]
position = Vector2( 18, 0 )
texture = SubResource( 18 )

[node name="Key4" type="Sprite" parent="InputMap/Lane8"]
position = Vector2( 54, 0 )
texture = SubResource( 19 )

[node name="Lane9" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 135.766, 82.3 )
script = ExtResource( 15 )

[node name="Key1" type="Sprite" parent="InputMap/Lane9"]
position = Vector2( -72, 0 )
texture = SubResource( 20 )

[node name="Key2" type="Sprite" parent="InputMap/Lane9"]
position = Vector2( -36, 0 )
texture = SubResource( 21 )

[node name="Key3" type="Sprite" parent="InputMap/Lane9"]
texture = SubResource( 22 )

[node name="Key4" type="Sprite" parent="InputMap/Lane9"]
position = Vector2( 30, 0 )
texture = SubResource( 23 )

[node name="Key5" type="Sprite" parent="InputMap/Lane9"]
position = Vector2( 54, 0 )
texture = SubResource( 24 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
autoplay = true
